[package]
name = "doc-p2p-test"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "ping", "mdns", "tokio"] }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p-swarm-derive = "0.34"